--- a/codeup-design.html
+++ b/codeup-design.html
@@ -108,14 +108,22 @@
             </div>
         </div>
     </section>
-    <aside>
-        <h3>THE LAST</h3>
-        <div class="grid">
-            <div class="g-col-6 g-col-md-4">THE ADMIN BAR AND ABSOLUTE POSITIONING</div>
-            <div class="g-col-6 g-col-md-4">NIBBLER AWESOME WEBSITE TESTING</div>
-            <div class="g-col-6 g-col-md-4">HOW TO GET GOOGLE TO LIKE YOU</div>
-        </div>
-    </aside>
+<aside>
+    <h3>THE LAST</h3>
+    <div class="grid" id="sidebar">
+        <div class="g-col-6 g-col-md-4">
+            <img src="img/mobile-phone.png">
+            THE ADMIN BAR AND ABSOLUTE POSITIONING</div>
+
+        <div class="g-col-6 g-col-md-4">
+            <img src="img/head.png">
+            NIBBLER AWESOME WEBSITE TESTING</div>
+
+        <div class="g-col-6 g-col-md-4">
+            <img src="img/google-search.png">
+            HOW TO GET GOOGLE TO LIKE YOU</div>
+    </div>
+</aside>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
