projects grid structure

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -50,64 +50,57 @@
     </section>
 <hr>
 
-        <!-- Selected Work - Wrapping from Bootstrap -->
-    <section class="container-lg">
-        <h5>Selected work</h5>
-        <div class="row row-cols-2">
+<!-- Selected Work - Wrapping from Bootstrap -->
+<!--   We need to work with the individual "Projects" and make then stack individually rather then as a whole     -->
+<section class="container" id="projects">
+    <h5>Selected work</h5>
+    <div class="row cols-2">
+
+
         <!--Apple ipad-->
-            <div class="row ">
-                <img src="img/apple-ipad.png">
-                <p class="featuredProject">Featured project</p>
-                <ul>
-                    <li class="redcolor dot">  D</li>
-                    <li class="orangecolor dot">D</li>
-                    <li class="greencolor dot">S</li>
-                    <li class="tealcolor dot">H</li>
-                </ul>
-
-            </div>
-        <!--Macbook-->
-            <div class="row">
-
+        <div class="row col-sm col-md col-lg col-xl">
+            <img src="img/apple-ipad.png">
+            <p class="featuredProject">Featured project</p>
+            <ul>
+                <li class="redcolor dot">  D</li>
+                <li class="orangecolor dot">D</li>
+                <li class="greencolor dot">S</li>
+                <li class="tealcolor dot">H</li>
+            </ul>
             <img src="img/macbook.png">
-                <p class="featuredProject">Featured project</p>
-                <ul>
-                    <li class="redcolor dot">  D</li>
-                    <li class="orangecolor dot">D</li>
-                    <li class="greencolor dot">S</li>
-                    <li class="tealcolor dot">H</li>
-                </ul>
-
-            </div>
-        <!--man's profile-->
-            <div class="row">
-
-                <img src="img/man.png">
-                <p class="featuredProject">Featured project</p>
-                <ul>
-                    <li class="redcolor dot">  D</li>
-                    <li class="orangecolor dot">D</li>
-                    <li class="greencolor dot">S</li>
-                    <li class="tealcolor dot">H</li>
-                </ul>
-
-            </div>
-        <!-- security -->
-            <div class="row">
-
-                <img src="img/security.png">
-                <p class="featuredProject">Featured project</p>
-
-                <ul>
-                    <li class="redcolor dot">  D  </li>
-                    <li class="orangecolor dot">D</li>
-                    <li class="greencolor dot">S</li>
-                    <li class="tealcolor dot">H</li>
-                </ul>
-
-            </div>
+            <p class="featuredProject">Featured project</p>
+            <ul>
+                <li class="redcolor dot">  D</li>
+                <li class="orangecolor dot">D</li>
+                <li class="greencolor dot">S</li>
+                <li class="tealcolor dot">H</li>
+            </ul>
         </div>
-    </section>
+
+
+        <!--man's profile-->
+        <div class="row col-sm col-md col-lg col-xl">
+
+            <img src="img/man.png">
+            <p class="featuredProject">Featured project</p>
+            <ul>
+                <li class="redcolor dot">  D</li>
+                <li class="orangecolor dot">D</li>
+                <li class="greencolor dot">S</li>
+                <li class="tealcolor dot">H</li>
+            </ul>
+            <img src="img/security.png" >
+            <p class="featuredProject">Featured project</p>
+
+            <ul>
+                <li class="redcolor dot">  D  </li>
+                <li class="orangecolor dot">D</li>
+                <li class="greencolor dot">S</li>
+                <li class="tealcolor dot">H</li>
+            </ul>
+        </div>
+    </div>
+</section>
 <aside>
     <h3>THE LAST</h3>
     <div class="grid" id="sidebar">
