--- a/codeup-design.html
+++ b/codeup-design.html
@@ -102,18 +102,18 @@
         </div>
     </div>
 </section>
-<aside>
+<aside class="d-lg-block d-sm-non d-md-none d-none row"id="sidebar">
     <h3>THE LAST</h3>
-    <div class="grid" id="sidebar">
-        <div class="g-col-6 g-col-md-4">
+    <div class="grid" >
+        <div class="col">
             <img src="img/mobile-phone.png">
             THE ADMIN BAR AND ABSOLUTE POSITIONING</div>
 
-        <div class="g-col-6 g-col-md-4">
+        <div class="col">
             <img src="img/head.png">
             NIBBLER AWESOME WEBSITE TESTING</div>
 
-        <div class="g-col-6 g-col-md-4">
+        <div class="col">
             <img src="img/google-search.png">
             HOW TO GET GOOGLE TO LIKE YOU</div>
     </div>
