--- a/codeup-design.html
+++ b/codeup-design.html
@@ -12,31 +12,31 @@
     <title>Codeup Design</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-light">
+<!--Top Navigation Menu-->
+<nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand text-dark" href="#top" >
+            <img src="img/logo.png" alt="Logo"  class="d-inline-block align-text-center logo heading">
+            codeup design
+        </a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="white-text">
+                <i class="fa-solid fa-bars fa-1x"></i>
+            </span>
         </button>
+        <!--        Navigation links (hidden by default)-->
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link" href="#">Pricing</a>
-                <a class="nav-link disabled">Disabled</a>
+            <div class="navbar-nav" >
+                <a class="nav-link active text-secondary" aria-current="page" href="#">HOME</a>
+                <a class="nav-link text-secondary" href="#services">SERVICES</a>
+                <a class="nav-link text-secondary" href="#work">WORK</a>
+                <a class="nav-link text-secondary" href="#blog">BLOG</a>
+                <a class="nav-link text-secondary" href="#contact">CONTACT</a>
             </div>
         </div>
     </div>
 </nav>
-<!--    <nav>-->
-<!--        <img src="img/logo.png" alt="companyLogo" id="logo">-->
-<!--        <h5 >codeup design</h5>-->
-<!--        <h6>SERVICES</h6>-->
-<!--        <h6>WORK</h6>-->
-<!--        <H6>BLOG</H6>-->
-<!--        <H6>CONTACT</H6>-->
-<!--        img-->
-<!--    </nav>-->
 <h1 class="heading">Visual Design & Web Development</h1>
 <h2 class="heading">From Park City, Utah</h2>
     <section class="container">
@@ -50,13 +50,9 @@
         </div>
     </section>
 <hr>
-
-<!-- Selected Work - Wrapping from Bootstrap -->
-<!--   We need to work with the individual "Projects" and make then stack individually rather then as a whole     -->
 <section class="container" id="projects">
     <h5>Selected work</h5>
     <div class="row cols-2">
-
 
         <!--Apple ipad-->
         <div class="row col-sm col-md col-lg col-xl">
